--- a/project-task-manager-ui/src/app/features/projects/project-detail/project-detail.component.html
+++ b/project-task-manager-ui/src/app/features/projects/project-detail/project-detail.component.html
@@ -82,7 +82,7 @@
                 <ng-container matColumnDef="status">
                   <th mat-header-cell *matHeaderCellDef> Status </th>
                   <td mat-cell *matCellDef="let task">
-                    <mat-chip [ngClass]="getStatusClass(task.status)">
+                    <mat-chip class="status-badge" [ngClass]="getStatusClass(task.status)">
                       {{ task.status }}
                     </mat-chip>
                   </td>
